<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ColorActivity">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/label_red"
                style="@style/red_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/title"
                android:layout_marginRight="12dp"
                android:text="@string/red" />

            <SeekBar
                android:id="@+id/seekBar_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignTop="@id/label_red"
                android:layout_toRightOf="@id/label_red"
                android:secondaryProgressTint="@color/silver"
                android:max="255"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">

            <TextView
                android:id="@+id/label_blue"
                style="@style/blue_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/label_red"
                android:text="@string/blue" />

            <SeekBar
                android:id="@+id/seekBar_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignTop="@id/label_blue"
                android:layout_toRightOf="@id/label_blue"
                android:max="255"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/label_green"
                style="@style/green_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/label_blue"
                android:text="@string/green" />

            <SeekBar
                android:id="@+id/seekBar_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignTop="@id/label_green"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/label_green"
                android:max="255"
                android:progress="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/label_alpha"
                style="@style/alpha_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/label_green"
                android:text="@string/alpha" />

            <SeekBar
                android:id="@+id/seekBar_alpha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/title"
                android:layout_alignStart="@+id/title"
                android:layout_alignTop="@id/label_alpha"
                android:layout_toRightOf="@id/label_alpha"
                android:max="255"
                android:progress="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/label_hex"
                style="@style/hex_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_alpha"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:text="@string/hex" />

            <EditText
                android:id="@+id/edittext_hex"
                style="@style/hex_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/label_hex"
                android:layout_toRightOf="@id/label_hex"
                android:text="#ffffff" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/label_color"
                style="@style/hex_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/label_hex"
                android:layout_marginRight="24dp"
                android:gravity="center_horizontal"
                android:text="@string/color" />

            <TextView
                android:id="@+id/textview_color"
                android:layout_width="180dp"
                android:layout_height="30dp"
                android:layout_alignTop="@id/label_color"
                android:layout_toRightOf="@id/label_hex"
                android:background="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:gravity="left">
            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:background="@color/silver"
                android:text="@string/save"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
